--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-day-picker": "^7.1.6",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-select": "^2.0.0-beta.2",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "redux": "^4.0.0"
   }
 }
