--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "dev": "webpack --mode development --module-bind js=babel-loader",
-    "build": "webpack --mode production --module-bind js=babel-loader"
+    "start": "concurrently \"npm run dev\" \"npm run api\"",
+    "dev": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production --module-bind js=babel-loader",
+    "api": "node simple_api/server.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
