--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-select": "^2.0.0-beta.2",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   }
 }
