--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,9 @@
     "func-names": ["error", "never"],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   },
-  "globals": {
-    "document": true,
-    "window": true
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
   }
 }
