--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "react-scripts start",
     "start": "concurrently \"npm run dev\" \"npm run api\"",
     "dev": "webpack-dev-server --hot --mode development --open",
     "api": "node simple_api/server.js",
@@ -61,6 +62,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.1.4",
     "react-select": "^2.0.0-beta.2",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.0",
