--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-dev-server": "^3.1.0"
   },
   "dependencies": {
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
@@ -62,6 +63,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^1.1.4",
     "react-select": "^2.0.0-beta.2",
     "react-transition-group": "^1.2.1",
