--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_course_js_ru_08_06_17",
+  "name": "react-redux-pet",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/romabelka/js_ru_08_06_17"
+    "url": "git+https://github.com/GeKiStolyarov/react-redux-pet"
   },
   "author": "",
   "license": "ISC",
@@ -27,9 +27,9 @@
     ]
   },
   "bugs": {
-    "url": "https://github.com/romabelka/js_ru_08_06_17"
+    "url": "https://github.com/GeKiStolyarov/react-redux-pet"
   },
-  "homepage": "https://github.com/romabelka/js_ru_08_06_17",
+  "homepage": "https://github.com/GeKiStolyarov/react-redux-pet",
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-eslint": "^8.2.2",
